--- a/app/components/RegistrationForm/Steps/CategorySelectionStep.module.css
+++ b/app/components/RegistrationForm/Steps/CategorySelectionStep.module.css
@@ -149,22 +149,34 @@
   margin-block-start: 1rem;
 }
 
-.backButton, .nextButton {
+.backButton {
+  background-color: #6c757d;
+}
+
+.nextButton {
+  background-color: #0056b3;
+  position: relative; /* Para o efeito de outline */
+  overflow: visible; /* Permitir que o outline seja visível */
+}
+
+.nextButton,
+.backButton {
+  color: white;
   padding: 0.75rem 1.5rem;
   border: none;
   border-radius: 4px;
   font-weight: 500;
   cursor: pointer;
   transition: background-color 0.2s;
+  opacity: 0.8;
+  transition: all 0.3s ease;
 }
 
-.backButton {
-  background-color: #6c757d;
-  color: white;
-}
-
+.nextButton:hover,
 .backButton:hover {
-  background-color: #5a6268;
+  opacity: 1;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .buttonWrapper {
@@ -173,24 +185,6 @@
   align-items: center;
   width: 7rem;
   margin-inline-end: -0.5rem;
-}
-
-.nextButton {
-  background-color: #007bff;
-  color: white;
-  position: relative; /* Para o efeito de outline */
-  transition: all 0.3s ease;
-  overflow: visible; /* Permitir que o outline seja visível */
-}
-
-.nextButton:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.nextButton:active {
-  transform: translateY(1px);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .receiptSection {
