--- a/app/components/RegistrationForm/Steps/Receipt/Receipt.module.css
+++ b/app/components/RegistrationForm/Steps/Receipt/Receipt.module.css
@@ -25,6 +25,7 @@
   justify-content: space-between;
   font-size: 0.75rem;
   font-weight: 600;
+  margin-block-end: 3px;
 }
 
 .title label {
@@ -48,7 +49,8 @@
 
 .dropZone:hover {
   border-color: #0066cc;
-  background: #f0f7ff;
+  background: #f5f5f5;
+  color: var(--info-text, #0030B9);
 }
 
 .fileInput {
@@ -77,7 +79,6 @@
   justify-content: space-between;
   gap: 1rem;
   font-size: 0.875rem;
-  color: #1f2937;
 }
 
 .removeButton {
@@ -92,7 +93,6 @@
   font-style: normal;
   color: #d32f2f;
   cursor: pointer;
-
 
   & span {
     text-decoration: none;
@@ -114,15 +114,6 @@
   margin-inline-start: 2px;
 }
 
-.trashIcon {
-  margin-right: 4px;
-  vertical-align: -2px;
-}
-
-.fileIcon {
-  margin-right: 2px;
-}
-
 .fileName {
   display: flex;
   align-items: center;
@@ -130,15 +121,22 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   flex: 1;
-  gap: 0.5rem;
+  gap: 0.6rem;
+
+  & span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 
-.fileName span {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.removeControl {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.3rem;
+  cursor: pointer;
 }
-
 
 @media (max-width: 768px) {
   .dropZone {
